--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Ejercicio individual: JQuery básico</title>  
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">  
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-  <script src="/js/main.js" defer></script>
+  <script src="js/main.js" defer></script>
 </head>
 <body>
     <div class="container text-center mt-5">
